manifests/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "82240947-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
  - host: sampleapp1-82240947.cepg-aa.kubepia.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-82240947
            port:
              number: 8080
